[FIX] web_studio: Fix xml sidebar resize can overflow screen
Before this commit:
When resizing the XmlEditor the user could resize the panel beyond the
screen width.

After this commit:
- The maximum witdh of the panel is now 100% of the screen width.
- The resize event now also stops propagation and prevents default
which prevent some unexpected behaviours when the mouse hovers other
elements.

closes odoo/enterprise#41389

X-original-commit: 9753661c5a8ea466f19c837ab92e160371671e69

--- a/web_studio/static/src/client_action/view_editor/xml_editor/resizable_panel/resizable_panel.scss
+++ b/web_studio/static/src/client_action/view_editor/xml_editor/resizable_panel/resizable_panel.scss
@@ -1,3 +1,9 @@
+.o_resizable_panel {
+    max-width: 100vw;
+    flex-grow: 0;
+    flex-shrink: 0;
+}
+
 .o_resizable_panel_handle {
     cursor: col-resize;
     z-index: 10;
